--- a/src/Umbraco.Web.UI.Client/src/less/rte.less
+++ b/src/Umbraco.Web.UI.Client/src/less/rte.less
@@ -121,7 +121,7 @@
 }
 
 .umb-rte .mce-btn.mce-active, .umb-rte .mce-btn.mce-active:active, 
-.umb-rte .mce-btn.mce-active:hover, .umb-rte .mce-btn.mce-active:focus {
+.umb-rte .mce-btn.mce-active:hover, .umb-rte .mce-btn.mce-active:focus-within {
     background: @gray-9;
     border-color: transparent;
     button {
