--- a/src/Umbraco.Web.UI.Client/src/less/belle.less
+++ b/src/Umbraco.Web.UI.Client/src/less/belle.less
@@ -218,6 +218,7 @@
 
 // Used for property editors
 @import "property-editors.less";
+@import "../views/propertyeditors/multiurlpicker/multiurlpicker.less";
 
 // Used for prevalue editors
 @import "components/prevalues/multivalues.less";
